# Dashboard-PAT-Signage

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
scripts/: install.sh
src/pat_sig/: __init__.py  __main__.py  config.py
src/pat_sig/cli/: main.py
src/pat_sig/cli/commands/: init.py  install.py  list.py  run.py  service.py
src/pat_sig/module/dsm/core/: settings.py  urls.py
src/pat_sig/module/dsm/home/: apps.py  handlers.py  models.py  signals.py  views.py
src/pat_sig/module/dsm/home/migrations/: 0001_initial.py  0002_dsmtask_task_type.py  0003_alter_dsmtask_status.py  0004_remove_dsmtask_ended_at_remove_dsmtask_started_at_and_more.py  0005_alter_dsmtask_status.py  0006_alter_dsmtask_created_at_alter_dsmtask_updated_at.py  0007_alter_dsmtask_created_at_alter_dsmtask_updated_at.py  0008_outboxreport.py
src/pat_sig/module/dsm/home/services/: mqtt_service.py  scheduler_service.py
src/pat_sig/module/dsm/home/templates/home/: home.html
src/pat_sig/module/worker/: stream.sh
