[project]
name = "pat-sig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django===5.2.13",
    "logging>=0.4.9.6",
    "rich-click>=1.9.7",
    "paho-mqtt>=1.6.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
[project.scripts]
pat-sig = "pat_sig.__main__:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length=88

[tool.isort]
profile = "black"
