[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pat-sig"
version = "0.1.0"
description = "PAT Digital Signage (DSM) edge display system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Django 4.2 LTS is the last series supporting Python 3.9 (Debian bullseye,
    # the target image, ships 3.9). 5.x requires >=3.10 and no 5.x-only ORM
    # features are used here.
    "django>=4.2,<5.0",
    "rich-click>=1.9.7",
    "rich>=13.0.0",
    "paho-mqtt>=1.6.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "gunicorn>=23.0.0",
]

[project.scripts]
pat-sig = "pat_sig.__main__:run"

[tool.uv.build-backend]
module-name = "pat_sig"
module-root = "src"

[tool.black]
line-length=88

[tool.isort]
profile = "black"
